@@ -1,3 +1,9 @@
+1999-06-30  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* archiver.m ([Controller -createEnd]): Use setCompareCStrings
+	instead of setCompareFunction: with compareCStrings function
+	argument.
+
 1999-06-28  Alex Lancaster  <alex@santafe.edu>
 
 	* archiver.m ([Controller -createEnd]): Conditionally create
